--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -32,17 +32,16 @@
         android:layout_width="@dimen/profile_width"
         android:layout_height="@dimen/profile_height"
         android:layout_weight="1"
-        android:layout_gravity="center"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:contentDescription="@string/profile_image_description"
         app:srcCompat="@android:drawable/sym_def_app_icon" />
 
     <RelativeLayout
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_weight="9"
+        android:layout_weight="19"
         android:padding="@dimen/general_padding"
         android:layout_marginStart="@dimen/general_padding">
 
