--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -5,8 +5,8 @@
 
     <item
         android:id="@+id/action_proceed_order"
-        android:icon="@drawable/ic_shopping_bag"
         android:orderInCategory="99"
+        app:actionLayout="@layout/action_view_details_layout"
         android:title="@string/action_proceed_order"
         app:showAsAction="always" />
 
