--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#FFFFFF</color>
     <color name="colorApp">#1976D2</color>
     <color name="colorDot">#d32f2f</color>
+    <color name="viewBg">#f1f5f8</color>
+    <color name="grey_ivory">#FFFFF0</color>
 </resources>
