--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,4 +13,5 @@
     <dimen name="profile_height">75dp</dimen>
     <dimen name="text_views_separations">6dp</dimen>
     <dimen name="general_padding">5dp</dimen>
+    <dimen name="badge_text_size">16sp</dimen>
 </resources>
