--- a/app/src/main/res/layout/landing_page_card.xml
+++ b/app/src/main/res/layout/landing_page_card.xml
@@ -4,7 +4,7 @@
     xmlns:card="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorPrimary">
+    android:background="@drawable/background_selector">
 
     <android.support.v7.widget.CardView
         android:id="@+id/landing_card_view"
