--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -143,7 +143,7 @@
                     android:layout_weight="9"
                     android:background="@android:color/white"
                     android:gravity="center"
-                    android:text="@string/favorites"
+                    android:text="@string/action_select_favourites"
                     android:textColor="@color/colorApp"
                     android:textSize="18sp" />
 
