--- a/app/src/main/res/drawable/ic_notifications_badge.xml
+++ b/app/src/main/res/drawable/ic_notifications_badge.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- layer drawable to display notification bell with a badge. Used in sliding menu -->
+<?xml version="1.0" encoding="utf-8"?><!-- layer drawable to display notification bell with a badge. Used in sliding menu -->
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:drawable="@drawable/ic_notifications"
