--- a/app/src/main/res/drawable/bg_circle.xml
+++ b/app/src/main/res/drawable/bg_circle.xml
@@ -1,13 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- This file provides circular background to view-->
-<shape
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?><!-- This file provides circular background to view-->
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
-    <solid
-        android:color="@color/colorDot"/>
+    <solid android:color="@color/colorDot" />
 
     <size
         android:width="120dp"
-        android:height="120dp"/>
+        android:height="120dp" />
 </shape>
