--- a/app/src/main/res/drawable/nav_view_item_text_color.xml
+++ b/app/src/main/res/drawable/nav_view_item_text_color.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Determine color of sliding menu item text when selected and not -->
+<?xml version="1.0" encoding="utf-8"?><!-- Determine color of sliding menu item text when selected and not -->
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:color="@android:color/black" android:state_checked="true" />
     <item android:color="@color/colorApp" />
