--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
@@ -23,9 +22,9 @@
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_main"
         app:itemBackground="@drawable/nav_view_item_background"
-        app:itemTextColor="@drawable/nav_view_item_text_color"
-        app:itemTextAppearance="@style/NavigationDrawerStyle"
         app:itemIconTint="@drawable/nav_view_item_icon_tint"
+        app:itemTextAppearance="@style/NavigationDrawerStyle"
+        app:itemTextColor="@drawable/nav_view_item_text_color"
         app:menu="@menu/activity_main_drawer" />
 
 </android.support.v4.widget.DrawerLayout>
