--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
-    tools:context=".activities.MainActivity">
+    tools:context="ke.co.venturisys.rubideliveryapp.fragments.HomeFragment">
 
     <LinearLayout
         android:id="@+id/input_linear_layout_search"
@@ -84,10 +84,10 @@
                         android:id="@+id/backdrop"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:adjustViewBounds="true"
                         android:contentDescription="@string/today_s_offer_image_description"
                         android:fitsSystemWindows="true"
                         android:scaleType="centerCrop"
-                        android:adjustViewBounds="true"
                         app:layout_collapseMode="parallax" />
 
                     <Button
