--- a/app/src/main/res/layout/general_recycler_view.xml
+++ b/app/src/main/res/layout/general_recycler_view.xml
@@ -1,10 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- provides a generalised recycler view -->
+<?xml version="1.0" encoding="utf-8"?><!-- provides a generalised recycler view -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/viewBg"
+    android:background="@android:color/white"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     <android.support.v7.widget.RecyclerView
