--- a/app/src/main/res/layout/landing_page_card.xml
+++ b/app/src/main/res/layout/landing_page_card.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -13,21 +12,20 @@
         android:layout_gravity="center"
         android:layout_margin="@dimen/card_margin"
         android:background="@color/colorPrimaryDark"
-        card:cardCornerRadius="@dimen/card_corner_radius">
+        card:cardCornerRadius="@dimen/card_landing_corner_radius">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
 
             <ImageView
                 android:id="@+id/landing_page_card_view_image"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/card_landing_image_height"
-                android:layout_marginTop="@dimen/card_landing_image_margin"
+                android:layout_marginBottom="0dp"
                 android:layout_marginLeft="@dimen/card_landing_image_margin"
                 android:layout_marginRight="@dimen/card_landing_image_margin"
-                android:layout_marginBottom="0dp"
+                android:layout_marginTop="@dimen/card_landing_image_margin"
                 android:contentDescription="@string/landing_card_image_description" />
 
             <TextView
@@ -35,9 +33,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/landing_page_card_view_image"
+                android:layout_marginBottom="@dimen/card_landing_text_margin"
                 android:layout_marginLeft="@dimen/card_landing_text_margin"
                 android:layout_marginRight="@dimen/card_landing_text_margin"
-                android:layout_marginBottom="@dimen/card_landing_text_margin"
                 android:gravity="center|top"
                 android:text="@string/landing_page_card_text_placeholder"
                 android:textColor="@color/colorApp"
