--- a/app/src/main/res/menu/notifications.xml
+++ b/app/src/main/res/menu/notifications.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Menu for notifications page -->
+<?xml version="1.0" encoding="utf-8"?><!-- Menu for notifications page -->
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
