--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorDot">#d32f2f</color>
     <color name="viewBg">#f1f5f8</color>
     <color name="grey_ivory">#FFFFF0</color>
+    <color name="colorNotificationDetails">#64B5F6</color>
 </resources>
