--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,12 +15,13 @@
     <dimen name="general_padding">5dp</dimen>
     <dimen name="badge_text_size">16sp</dimen>
 
-    <!-- Card view dimens -->
+    <!-- landing page card view dimens -->
     <dimen name="card_margin">5dp</dimen>
-    <dimen name="card_corner_radius">20dp</dimen>
+    <dimen name="card_landing_corner_radius">20dp</dimen>
     <dimen name="detail_backdrop_height">200dp</dimen>
     <dimen name="item_offset">10dp</dimen>
     <dimen name="card_landing_image_height">200dp</dimen>
     <dimen name="card_landing_image_margin">5dp</dimen>
     <dimen name="card_landing_text_margin">10dp</dimen>
+    <dimen name="card_notifications_margin">15dp</dimen>
 </resources>
