--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -92,7 +92,7 @@
 
                     <Button
                         android:id="@+id/offerBtn"
-                        android:layout_width="wrap_content"
+                        android:layout_width="125dp"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
                         android:background="@color/colorApp"
