--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -12,8 +12,8 @@
 
     <ImageView
         android:id="@+id/img_close_menu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="@dimen/text_views_separations"
         android:contentDescription="@string/close_menu_description"
@@ -24,7 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/img_close_menu"
-        android:layout_marginTop="@dimen/text_views_separations">
+        android:layout_marginTop="@dimen/item_offset">
 
         <ImageView
             android:id="@+id/img_profile"
@@ -33,14 +33,13 @@
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
             android:layout_weight="1"
             android:contentDescription="@string/profile_image_description"
-            android:paddingTop="@dimen/nav_header_vertical_spacing"
+            android:paddingBottom="@dimen/nav_header_vertical_spacing"
             app:srcCompat="@android:drawable/sym_def_app_icon" />
 
         <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginStart="@dimen/general_padding"
             android:layout_weight="19"
             android:padding="@dimen/general_padding">
 
