--- a/app/src/main/res/layout/notifications_page_card.xml
+++ b/app/src/main/res/layout/notifications_page_card.xml
@@ -3,8 +3,8 @@
     xmlns:card="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginEnd="10dp"
-    android:layout_marginStart="10dp"
+    android:layout_marginEnd="@dimen/item_offset"
+    android:layout_marginStart="@dimen/item_offset"
     android:background="@drawable/background_selector">
 
     <android.support.v7.widget.CardView
