--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#FAFAFA</color>
     <color name="colorPrimaryDark">#F1F1F1</color>
     <color name="colorAccent">#FFFFFF</color>
-    <color name="colorApp">#1976D2</color>
+    <color name="colorApp">#76aadc</color>
     <color name="colorDot">#d32f2f</color>
     <color name="viewBg">#f1f5f8</color>
     <color name="grey_ivory">#FFFFF0</color>
