--- a/app/src/main/res/drawable/rounded_rectangle_edges.xml
+++ b/app/src/main/res/drawable/rounded_rectangle_edges.xml
@@ -1,9 +1,9 @@
+<!-- Drawable provides a blue rectangular background with edges rounded -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle" >
+    android:shape="rectangle">
 
     <solid android:color="@color/colorApp" />
 
-    <corners
-        android:radius="20dp"/>
+    <corners android:radius="20dp" />
 
 </shape>
