--- a/app/src/main/res/layout/cart_page_card.xml
+++ b/app/src/main/res/layout/cart_page_card.xml
@@ -24,9 +24,9 @@
             <RelativeLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:layout_marginStart="2dp"
                 android:layout_marginEnd="2dp"
+                android:layout_marginStart="2dp"
+                android:layout_weight="1"
                 android:orientation="vertical">
 
                 <TextView
@@ -37,8 +37,8 @@
                     android:layout_marginStart="@dimen/item_offset"
                     android:layout_marginTop="@dimen/general_padding"
                     android:text="@string/cart_order_name"
-                    android:textSize="16sp"
-                    android:textColor="@color/colorApp"/>
+                    android:textColor="@color/colorApp"
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/order_meal_details"
@@ -48,37 +48,37 @@
                     android:layout_marginStart="@dimen/item_offset"
                     android:layout_marginTop="@dimen/item_offset"
                     android:text="@string/cart_order_details"
-                    android:textSize="14sp"
-                    android:textColor="@color/colorApp"/>
+                    android:textColor="@color/colorApp"
+                    android:textSize="14sp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/item_offset"
                     android:layout_below="@id/order_meal_details"
+                    android:layout_marginTop="@dimen/item_offset"
                     android:orientation="horizontal">
 
                     <Button
                         android:id="@+id/order_meal_edit_btn"
+                        style="?android:attr/buttonBarButtonStyle"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="start|center_vertical"
                         android:text="@string/edit"
                         android:textColor="@color/colorApp"
-                        android:textSize="16sp"
-                        style="?android:attr/buttonBarButtonStyle"/>
+                        android:textSize="16sp" />
 
                     <Button
                         android:id="@+id/order_meal_delete_btn"
+                        style="?android:attr/buttonBarButtonStyle"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="start|center_vertical"
                         android:text="@string/delete"
                         android:textColor="@color/colorApp"
-                        android:textSize="16sp"
-                        style="?android:attr/buttonBarButtonStyle"/>
+                        android:textSize="16sp" />
 
                 </LinearLayout>
 
@@ -87,51 +87,51 @@
             <RelativeLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
                 android:layout_marginStart="@dimen/item_offset"
-                android:paddingStart="@dimen/general_padding"
-                android:paddingEnd="@dimen/general_padding">
+                android:layout_weight="1"
+                android:paddingEnd="@dimen/general_padding"
+                android:paddingStart="@dimen/general_padding">
 
                 <LinearLayout
                     android:id="@+id/order_meal_amount_linear_layout"
                     android:layout_width="120dp"
                     android:layout_height="30dp"
-                    android:layout_centerHorizontal="true"
                     android:layout_alignParentTop="true"
-                    android:orientation="horizontal"
-                    android:background="@drawable/rounded_rectangle_edges">
+                    android:layout_centerHorizontal="true"
+                    android:background="@drawable/rounded_rectangle_edges"
+                    android:orientation="horizontal">
 
                     <ImageButton
                         android:id="@+id/order_meal_add_btn"
+                        style="?android:attr/buttonBarButtonStyle"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:contentDescription="@string/add_btn_description"
-                        android:src="@drawable/ic_add"
-                        style="?android:attr/buttonBarButtonStyle"/>
+                        android:src="@drawable/ic_add" />
 
                     <EditText
                         android:id="@+id/order_meal_edit_amount"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="center"
                         android:layout_weight="1"
                         android:background="@android:color/transparent"
-                        android:inputType="numberDecimal"
+                        android:gravity="center"
                         android:hint="@string/hint_edit_meal_amount"
+                        android:inputType="numberDecimal"
                         android:singleLine="true"
                         android:textColor="@android:color/white"
-                        android:gravity="center"
-                        android:layout_gravity="center"
-                        android:textSize="18sp"/>
+                        android:textSize="18sp" />
 
                     <ImageButton
                         android:id="@+id/order_meal_minus_btn"
+                        style="?android:attr/buttonBarButtonStyle"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:contentDescription="@string/minus_btn_description"
-                        android:src="@drawable/ic_minus"
-                        style="?android:attr/buttonBarButtonStyle"/>
+                        android:src="@drawable/ic_minus" />
 
                 </LinearLayout>
 
@@ -140,11 +140,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/order_meal_amount_linear_layout"
-                    android:text="@string/cart_order_price"
-                    android:gravity="center"
                     android:layout_marginTop="35dp"
+                    android:gravity="center"
+                    android:text="@string/cart_order_price"
                     android:textColor="@color/colorApp"
-                    android:textSize="16sp"/>
+                    android:textSize="16sp" />
 
             </RelativeLayout>
 
