--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,13 +1,177 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="ke.co.venturisys.rubideliveryapp.fragments.ProfileFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="vertical">
 
-</FrameLayout>
+        <RelativeLayout
+            android:id="@+id/profile_relative_layout1"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:background="@drawable/layout_shadow"
+            android:paddingEnd="@dimen/item_offset"
+            android:paddingStart="@dimen/item_offset">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_centerInParent="true"
+                android:layout_margin="@dimen/item_offset"
+                android:orientation="vertical">
+
+                <RelativeLayout
+                    android:layout_width="90dp"
+                    android:layout_height="0dp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="50dp"
+                    android:layout_weight="2">
+
+                    <ImageView
+                        android:id="@+id/img_profile_page"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_centerInParent="true"
+                        android:contentDescription="@string/profile_image_description"
+                        android:cropToPadding="true"
+                        android:padding="5dp"
+                        app:srcCompat="@android:drawable/sym_def_app_icon" />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true"
+                        android:layout_alignParentEnd="true"
+                        android:contentDescription="@string/edit_profile_image_description"
+                        android:src="@drawable/ic_add_circle_outline" />
+                </RelativeLayout>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_marginTop="@dimen/general_padding"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:padding="@dimen/general_padding"
+                    android:text="@string/name_placeholder"
+                    android:textColor="@android:color/white"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_marginBottom="@dimen/item_offset"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:padding="@dimen/general_padding"
+                    android:text="@string/details_placeholder"
+                    android:textColor="@android:color/white"
+                    android:textSize="18sp" />
+
+            </LinearLayout>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_margin="25dp"
+                android:contentDescription="@string/redirect_home_description"
+                android:padding="@dimen/general_padding"
+                android:src="@drawable/ic_chevron_left"
+                android:tint="#fff" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentTop="true"
+                android:layout_margin="25dp"
+                android:contentDescription="@string/edit_profile_description"
+                android:src="@drawable/ic_add_circle_outline" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/profile_relative_layout2"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="35dp"
+            android:layout_weight="1">
+
+            <TextView
+                android:id="@+id/tvProfileLocation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_marginBottom="@dimen/item_offset"
+                android:layout_marginTop="35dp"
+                android:drawablePadding="35dp"
+                android:drawableStart="@drawable/ic_pin"
+                android:gravity="start"
+                android:paddingEnd="0dp"
+                android:paddingStart="35dp"
+                android:text="@string/location_placeholder"
+                android:textColor="@color/colorApp"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/tvProfileContacts"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tvProfileLocation"
+                android:layout_marginBottom="@dimen/item_offset"
+                android:layout_marginTop="20dp"
+                android:drawablePadding="35dp"
+                android:drawableStart="@drawable/ic_phone"
+                android:gravity="start"
+                android:paddingEnd="0dp"
+                android:paddingStart="35dp"
+                android:text="@string/phone_placeholder"
+                android:textColor="@color/colorApp"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/tvProfileEmail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tvProfileContacts"
+                android:layout_marginTop="20dp"
+                android:drawablePadding="35dp"
+                android:drawableStart="@drawable/ic_envelope"
+                android:gravity="start"
+                android:paddingEnd="0dp"
+                android:paddingStart="35dp"
+                android:text="@string/email_placeholder"
+                android:textColor="@color/colorApp"
+                android:textSize="16sp" />
+
+        </RelativeLayout>
+
+    </LinearLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="@dimen/activity_vertical_margin"
+        android:background="@drawable/rounded_button_with_shadow"
+        android:paddingBottom="@dimen/item_offset"
+        android:paddingEnd="40dp"
+        android:paddingStart="40dp"
+        android:paddingTop="@dimen/item_offset"
+        android:text="@string/order_history"
+        android:textAllCaps="false"
+        android:textColor="@color/colorApp"
+        android:textSize="16sp"
+        app:layout_anchor="@id/profile_relative_layout1"
+        app:layout_anchorGravity="bottom|center" />
+
+</android.support.design.widget.CoordinatorLayout>
