--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/profile_coordinator_layout"
     tools:context="ke.co.venturisys.rubideliveryapp.fragments.ProfileFragment">
 
     <LinearLayout
@@ -20,18 +21,18 @@
             android:paddingStart="@dimen/item_offset">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_centerInParent="true"
                 android:layout_margin="@dimen/item_offset"
                 android:orientation="vertical">
 
                 <RelativeLayout
-                    android:layout_width="90dp"
+                    android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_gravity="center"
-                    android:layout_marginTop="50dp"
-                    android:layout_weight="2">
+                    android:layout_marginTop="15dp"
+                    android:layout_weight="1">
 
                     <ImageView
                         android:id="@+id/img_profile_page"
@@ -43,63 +44,73 @@
                         android:padding="5dp"
                         app:srcCompat="@android:drawable/sym_def_app_icon" />
 
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentBottom="true"
-                        android:layout_alignParentEnd="true"
-                        android:contentDescription="@string/edit_profile_image_description"
-                        android:src="@drawable/ic_add_circle_outline" />
+                    <!--<ImageView-->
+                        <!--android:layout_width="wrap_content"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:layout_alignParentBottom="true"-->
+                        <!--android:layout_alignParentEnd="true"-->
+                        <!--android:contentDescription="@string/edit_profile_image_description"-->
+                        <!--android:src="@drawable/ic_add_circle_outline" />-->
                 </RelativeLayout>
 
-                <TextView
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    android:layout_marginTop="@dimen/general_padding"
-                    android:layout_weight="1"
-                    android:gravity="center"
+                    android:layout_weight="0.6"
+                    android:layout_marginTop="@dimen/item_offset"
+                    android:layout_marginBottom="@dimen/item_offset">
+
+                <TextView
+                    android:id="@+id/tvProfileName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:padding="@dimen/general_padding"
+                    android:gravity="center"
                     android:text="@string/name_placeholder"
                     android:textColor="@android:color/white"
                     android:textSize="18sp" />
 
                 <TextView
+                    android:id="@+id/tvProfileDetails"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_marginBottom="@dimen/item_offset"
-                    android:layout_weight="1"
-                    android:gravity="center"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tvProfileName"
                     android:padding="@dimen/general_padding"
+                    android:gravity="center"
                     android:text="@string/details_placeholder"
                     android:textColor="@android:color/white"
                     android:textSize="18sp" />
 
+                </RelativeLayout>
+
             </LinearLayout>
 
             <ImageView
+                android:id="@+id/btnProfileHome"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:layout_margin="25dp"
+                android:layout_margin="15dp"
                 android:contentDescription="@string/redirect_home_description"
                 android:padding="@dimen/general_padding"
                 android:src="@drawable/ic_chevron_left"
                 android:tint="#fff" />
 
             <ImageView
+                android:id="@+id/btnProfileEdit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentTop="true"
-                android:layout_margin="25dp"
+                android:layout_margin="15dp"
                 android:contentDescription="@string/edit_profile_description"
                 android:src="@drawable/ic_add_circle_outline" />
 
         </RelativeLayout>
 
         <RelativeLayout
-            android:id="@+id/profile_relative_layout2"
+            android:id="@+id/profile_linear_layout2"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginTop="35dp"
