--- a/app/src/main/res/layout/cart_page_card.xml
+++ b/app/src/main/res/layout/cart_page_card.xml
@@ -67,6 +67,7 @@
                         android:gravity="start|center_vertical"
                         android:text="@string/edit"
                         android:textColor="@color/colorApp"
+                        android:textAllCaps="false"
                         android:textSize="16sp" />
 
                     <Button
@@ -78,6 +79,7 @@
                         android:gravity="start|center_vertical"
                         android:text="@string/delete"
                         android:textColor="@color/colorApp"
+                        android:textAllCaps="false"
                         android:textSize="16sp" />
 
                 </LinearLayout>
