--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -21,6 +21,7 @@
         android:tint="@color/colorApp" />
 
     <LinearLayout
+        android:id="@+id/navHeaderLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/img_close_menu"
@@ -36,12 +37,17 @@
             android:paddingBottom="@dimen/nav_header_vertical_spacing"
             app:srcCompat="@android:drawable/sym_def_app_icon" />
 
-        <RelativeLayout
+        <ScrollView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:layout_weight="19"
+            android:layout_gravity="center"
             android:padding="@dimen/general_padding">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center">
 
             <TextView
                 android:id="@+id/nameTextView"
@@ -66,6 +72,8 @@
                 android:textSize="18sp" />
 
         </RelativeLayout>
+
+        </ScrollView>
 
     </LinearLayout>
 
